window.SIDEBAR_ITEMS = {"enum":["Direction","ErrorReason"],"mod":["client","grpc","proto","subscription"],"struct":["CheckpointNotFoundError","Config","ErrorDetails","ObjectNotFoundError","RpcError","RpcMetrics","RpcMetricsMakeCallbackHandler","RpcService","ServerVersion","TransactionNotFoundError"],"type":["Result"]};